--- a/documents.html
+++ b/documents.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bloggy - Personal Blog Template</title>
+        <title>Jose Rojas - Certifies</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -25,7 +25,7 @@
         <div class="sidebar">
             <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                 <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                <h1 class="font-weight-bold">Kate Glover</h1>
+                <h1 class="font-weight-bold">Jose Rojas</h1>
                 <p class="mb-4">
                     I am a proactive person, I like to learn new skills and I learn very quickly. I seek to put my knowledge and skills to the test and contribute as much as possible. My interests are fields related to technology. I am looking for a new experience with challenges, which is set in technology.
                 </p>
@@ -35,7 +35,7 @@
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/rodolfo-rojas-ocampo-1b5a0a122/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.instagram.com/joserodolforojasocampo/?hl=es-la"><i class="fab fa-instagram"></i></a>
                 </div>
-                <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
+                <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Download CV</a>
             </div>
             <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
@@ -77,13 +77,13 @@
             <div class="container py-5 px-2 bg-primary">
                 <div class="row py-5 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">About Me</h1>
+                        <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Documents</h1>
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
-                            <h4 class="m-0 text-white"><a class="text-white" href="">Home</a></h4>
+                            <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
                             <h4 class="m-0 text-white px-2">/</h4>
-                            <h4 class="m-0 text-white">About Me</h4>
+                            <h4 class="m-0 text-white">Documents</h4>
                         </div>
                     </div>
                 </div>
@@ -95,13 +95,41 @@
             <div class="container bg-white pt-5">
                 <div class="row px-3 pb-5">
                     <div class="col-md-12">
-                        <h2 class="mb-4 font-weight-bold">Article writer with 10 years of experience</h2>
-                        <img class="img-fluid float-left w-50 mr-4 mb-3" src="img/about.jpg" alt="Image">
-                        <p class="m-0">
-                            Takimata lorem et ut et diam amet dolor gubergren, amet dolor eirmod sea sea invidunt, sed no sed diam ipsum ut et. Sit nonumy est ut consetetur sed, labore dolor ipsum sed ea dolor lorem erat et erat, consetetur sed labore duo voluptua rebum sed gubergren. Dolores nonumy sanctus erat clita stet sed, dolore justo diam eos aliquyam diam. Clita nonumy rebum dolor dolor eos takimata labore diam sed, et voluptua et invidunt sanctus, elitr dolor nonumy tempor dolor elitr lorem no dolor ipsum, ut at gubergren dolor est aliquyam stet, et sea takimata rebum labore erat duo invidunt lorem. At takimata stet diam dolore accusam, kasd at diam aliquyam diam sed est dolor takimata. Sadipscing rebum diam ea et tempor, eirmod et et invidunt voluptua et dolor sit. Labore labore clita et amet sea sit et, est ipsum eirmod amet voluptua dolore, diam eirmod kasd lorem gubergren clita at amet, sea accusam vero amet lorem eos sed diam sit amet, nonumy ipsum et tempor magna dolores aliquyam vero eos ipsum. Ipsum ipsum sadipscing diam aliquyam diam et ipsum eos vero, gubergren magna elitr elitr clita dolor. Aliquyam vero sed sanctus sed dolore sanctus elitr no amet, ea magna ipsum.
-                        </p>
+                        <h2 class="mb-4 font-weight-bold">Certifies of differents skills</h2>
+                        	<figure>
+								<img class="img-certifies" src="certifies/dante_b1.png" alt="Image">
+							</figure>
+							<br>
+							<figure>
+								<img class="img-certifies" src="certifies/hr_python.png" alt="Image">
+							</figure>
+							<br>
+							<figure>
+								<img class="img-certifies" src="certifies/hr_sql.png" alt="Image">
+							</figure>
+							<br>
+							<figure>
+								<img class="img-certifies" src="certifies/sg_anatomic.png" alt="Image">
+							</figure>
+							<br>
+							<figure>
+								<img class="img-certifies" src="certifies/sg_basic.png" alt="Image">
+							</figure>
+							<br>
+							<figure>
+								<img class="img-certifies" src="certifies/uci_msproj.png" alt="Image">
+							</figure>
+							<br>
+							<figure>
+								<img class="img-certifies" src="certifies/udemy_pv.png" alt="Image">
+							</figure>
+							<br>
+							<figure>
+								<img class="img-certifies" src="certifies/udemy_vsd.jpg" alt="Image">
+							</figure>
+						
                     </div>
-                    <div class="col-md-12 pt-4">
+                    <!--<div class="col-md-12 pt-4">
                         <div class="d-flex flex-column skills">
                             <div class="progress w-100 mb-4">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Adaptability</div>
@@ -114,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+-->                </div>
             </div>
             <!-- About End -->
 
