--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="sidebar">
                 <div class="sidebar-text d-flex flex-column h-100 justify-content-center text-center">
                     <img class="mx-auto d-block w-75 bg-primary img-fluid rounded-circle mb-4 p-3" src="img/profile.jpg" alt="Image">
-                    <h1 class="font-weight-bold">Jose Rojas Ocampo</h1>
+                    <h1 class="font-weight-bold">Jose Rojas</h1>
                     <p class="mb-4">
                         I am a proactive person, I like to learn new skills and I learn very quickly. I seek to put my knowledge and skills to the test and contribute as much as possible. My interests are fields related to technology. I am looking for a new experience with challenges, which is set in technology.
                     </p>
