--- a/about.html
+++ b/about.html
@@ -29,13 +29,15 @@
                 <p class="mb-4">
                     I am a proactive person, I like to learn new skills and I learn very quickly. I seek to put my knowledge and skills to the test and contribute as much as possible. My interests are fields related to technology. I am looking for a new experience with challenges, which is set in technology.
                 </p>
-                <div class="d-flex justify-content-center mb-5">
-                    <a class="btn btn-outline-primary mr-2" href="https://github.com/Karoife"><i class="fab fa-github"></i></a>
+                <div class="d-flex justify-content-center mb-5">                    
+                        <a class="btn btn-outline-primary mr-2" href="https://github.com/Karoife"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.facebook.com/Cokit.n.n/"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/rodolfo-rojas-ocampo-1b5a0a122/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.instagram.com/joserodolforojasocampo/?hl=es-la"><i class="fab fa-instagram"></i></a>
+						<a class="btn btn-outline-primary mr-2" href="https://wa.me/50684865171"><i class="fab fa-whatsapp"></i></a>
+						<!--<a class="btn btn-outline-primary mr-2" href="https://telegram.me/Cokife"><i class="fab fa-telegram"></i></a>-->
                 </div>
-                <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
+                <a href="pdf/my_resume.pdf" class="btn btn-lg btn-block btn-primary mt-auto" download="my_resume.pdf">Download CV</a>
             </div>
             <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
@@ -95,7 +97,7 @@
             <div class="container bg-white pt-5">
                 <div class="row px-3 pb-5">
                     <div class="col-md-12">
-                        <h2 class="mb-4 font-weight-bold">Article writer with 10 years of experience</h2>
+                        <h2 class="mb-4 font-weight-bold">I'm seeking differents ways to learn</h2>
                         <img class="img-fluid float-left w-50 mr-4 mb-3" src="img/about.jpg" alt="Image">
                         <p class="m-0">
                             Takimata lorem et ut et diam amet dolor gubergren, amet dolor eirmod sea sea invidunt, sed no sed diam ipsum ut et. Sit nonumy est ut consetetur sed, labore dolor ipsum sed ea dolor lorem erat et erat, consetetur sed labore duo voluptua rebum sed gubergren. Dolores nonumy sanctus erat clita stet sed, dolore justo diam eos aliquyam diam. Clita nonumy rebum dolor dolor eos takimata labore diam sed, et voluptua et invidunt sanctus, elitr dolor nonumy tempor dolor elitr lorem no dolor ipsum, ut at gubergren dolor est aliquyam stet, et sea takimata rebum labore erat duo invidunt lorem. At takimata stet diam dolore accusam, kasd at diam aliquyam diam sed est dolor takimata. Sadipscing rebum diam ea et tempor, eirmod et et invidunt voluptua et dolor sit. Labore labore clita et amet sea sit et, est ipsum eirmod amet voluptua dolore, diam eirmod kasd lorem gubergren clita at amet, sea accusam vero amet lorem eos sed diam sit amet, nonumy ipsum et tempor magna dolores aliquyam vero eos ipsum. Ipsum ipsum sadipscing diam aliquyam diam et ipsum eos vero, gubergren magna elitr elitr clita dolor. Aliquyam vero sed sanctus sed dolore sanctus elitr no amet, ea magna ipsum.
