--- a/education.html
+++ b/education.html
@@ -29,13 +29,15 @@
                 <p class="mb-4">
                     I am a proactive person, I like to learn new skills and I learn very quickly. I seek to put my knowledge and skills to the test and contribute as much as possible. My interests are fields related to technology. I am looking for a new experience with challenges, which is set in technology.
                 </p>
-                <div class="d-flex justify-content-center mb-5">
-                    <a class="btn btn-outline-primary mr-2" href="https://github.com/Karoife"><i class="fab fa-github"></i></a>
+                <div class="d-flex justify-content-center mb-5">                    
+                        <a class="btn btn-outline-primary mr-2" href="https://github.com/Karoife"><i class="fab fa-github"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.facebook.com/Cokit.n.n/"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/rodolfo-rojas-ocampo-1b5a0a122/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.instagram.com/joserodolforojasocampo/?hl=es-la"><i class="fab fa-instagram"></i></a>
+						<a class="btn btn-outline-primary mr-2" href="https://wa.me/50684865171"><i class="fab fa-whatsapp"></i></a>
+						<!--<a class="btn btn-outline-primary mr-2" href="https://telegram.me/Cokife"><i class="fab fa-telegram"></i></a>-->
                 </div>
-                <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Download</a>
+                <a href="pdf/my_resume.pdf" class="btn btn-lg btn-block btn-primary mt-auto" download="my_resume.pdf">Download CV</a>
             </div>
             <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
@@ -99,23 +101,25 @@
 						
 						<figure>
                         	<img class="img-university float-left w-10 mr-4 mb-3" src="universities/uci.png" alt="Image">
-							<h3 class=""> 2021-2022 Master of Project Management</h3>
-							<h3> University for the International Colaboration</h3>
+							<h4 class="mb-4"> 2021-2022 Master of Project Management</h4>
+							<h4 class="mb-4"> University for the International Colaboration</h4>
                         </figure>
 						<figure>
                         	<img class="img-university float-left w-50 mr-4 mb-3" src="universities/uned.png" alt="Image">
-							<h3 class=""> 2021-2025 Bachelor of Software Engineering </h3>
-							<h3> Distance State University of Costa Rica</h3>
+							<h4 class="mb-4"> 2021-2025 Bachelor of Software Engineering </h4>
+							<h4 class="mb-4"> Distance State University of Costa Rica</h4>
                         </figure>
 						<figure>
                         	<img class="img-university float-left w-50 mr-4 mb-3" src="universities/ucr.png" alt="Image">
-							<h3 class=""> 2021-2025 Licenciate of Electrical Engineering </h3>
-							<h3> University of Costa Rica</h3>
+							<h4 class="mb-4"> 2021-2025 Licenciate of Electrical Engineering </h4>
+							<h4 class="mb-4"> University of Costa Rica</h4>
                         </figure>
 						<figure>
                         	<img class="img-university float-left w-50 mr-4 mb-3" src="universities/ucr.png" alt="Image">
-							<h3 class=""> 2021-2025 Bachelor of Electrical Engineering </h3>
-							<h3> University of Costa Rica</h3>
+							<h4 class="mb-4"> 2021-2025 Bachelor of Electrical Engineering </h4>
+							<h4 class="mb-4"> University of Costa Rica</h4
+								
+								>
                         </figure>
                     </div>                 
                 </div>
