--- a/skills.html
+++ b/skills.html
@@ -34,8 +34,10 @@
                         <a class="btn btn-outline-primary mr-2" href="https://www.facebook.com/Cokit.n.n/"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.linkedin.com/in/rodolfo-rojas-ocampo-1b5a0a122/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-primary mr-2" href="https://www.instagram.com/joserodolforojasocampo/?hl=es-la"><i class="fab fa-instagram"></i></a>
+						<a class="btn btn-outline-primary mr-2" href="https://wa.me/50684865171"><i class="fab fa-whatsapp"></i></a>
+						<!--<a class="btn btn-outline-primary mr-2" href="https://telegram.me/Cokife"><i class="fab fa-telegram"></i></a>-->
                 </div>
-                <a href="" class="btn btn-lg btn-block btn-primary mt-auto">Hire Me</a>
+                <a href="pdf/my_resume.pdf" class="btn btn-lg btn-block btn-primary mt-auto" download="my_resume.pdf">Download CV</a>
             </div>
             <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
                 <i class="fas fa-2x fa-angle-double-right text-primary"></i>
