--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
-                            <h4 class="m-0 text-white"><a class="text-white" href="">Home</a></h4>
+                            <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
                             <h4 class="m-0 text-white px-2">/</h4>
                             <h4 class="m-0 text-white">About Me</h4>
                         </div>
@@ -100,9 +100,14 @@
                         <h2 class="mb-4 font-weight-bold">I'm seeking differents ways to learn</h2>
                         <img class="img-fluid float-left w-50 mr-4 mb-3" src="img/about.jpg" alt="Image">
                         <p class="m-0">
-                            Takimata lorem et ut et diam amet dolor gubergren, amet dolor eirmod sea sea invidunt, sed no sed diam ipsum ut et. Sit nonumy est ut consetetur sed, labore dolor ipsum sed ea dolor lorem erat et erat, consetetur sed labore duo voluptua rebum sed gubergren. Dolores nonumy sanctus erat clita stet sed, dolore justo diam eos aliquyam diam. Clita nonumy rebum dolor dolor eos takimata labore diam sed, et voluptua et invidunt sanctus, elitr dolor nonumy tempor dolor elitr lorem no dolor ipsum, ut at gubergren dolor est aliquyam stet, et sea takimata rebum labore erat duo invidunt lorem. At takimata stet diam dolore accusam, kasd at diam aliquyam diam sed est dolor takimata. Sadipscing rebum diam ea et tempor, eirmod et et invidunt voluptua et dolor sit. Labore labore clita et amet sea sit et, est ipsum eirmod amet voluptua dolore, diam eirmod kasd lorem gubergren clita at amet, sea accusam vero amet lorem eos sed diam sit amet, nonumy ipsum et tempor magna dolores aliquyam vero eos ipsum. Ipsum ipsum sadipscing diam aliquyam diam et ipsum eos vero, gubergren magna elitr elitr clita dolor. Aliquyam vero sed sanctus sed dolore sanctus elitr no amet, ea magna ipsum.
+                            Proactive person with an affinity to look for new challenges. Oriented to the area of technology and energy. I currently have a Bachelor's degree in Electrical Engineering from the University of Costa Rica, in which the graduation project was "Design of an algorithm for the detection of faults in electrical networks with smart meters". I am also finishing my Bachelor's thesis with the project "Review of faults in solar panels and design of an algorithm based on neural networks". I worked at "Eaton Electrical SRL" current market leader in low voltage distribution equipment, as "Project Quotation Engineer" in which my tasks are the review of electrical plans for projects in the commercial and industrial sector of Costa Rica, and the realization of technical and economic offer for each project. Now I also want to 
                         </p>
 						<video class="videos" src="Hobbies/tarzan.mp4" autoplay muted="on" loop></video>
+						<p clas="m-0">My hobbies are exercise, drawing, programming and languages. I speak English and Italian, and I am starting to learn Portuguese </p>
+						
+						<img class="wolver float-right w-50 mr-4 mb-3" src="Hobbies/wolverin.png" alt="Image">
+						<p clas="m-0">My hobbies are exercise, drawing, learning and languages. I speak English and Italian, and I am starting to learn Portuguese.  </p>
+						
                     </div>
                 </div>
             </div>
