--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ecomn">
     <head>
         <meta charset="utf-8">
         <title>Eng Jose Rojas</title>
