--- a/work.html
+++ b/work.html
@@ -79,13 +79,13 @@
             <div class="container py-5 px-2 bg-primary">
                 <div class="row py-5 px-4">
                     <div class="col-sm-6 text-center text-md-left">
-                        <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">About Me</h1>
+                        <h1 class="mb-3 mb-md-0 text-white text-uppercase font-weight-bold">Work History</h1>
                     </div>
                     <div class="col-sm-6 text-center text-md-right">
                         <div class="d-inline-flex pt-2">
-                            <h4 class="m-0 text-white"><a class="text-white" href="">Home</a></h4>
+                            <h4 class="m-0 text-white"><a class="text-white" href="index.html">Home</a></h4>
                             <h4 class="m-0 text-white px-2">/</h4>
-                            <h4 class="m-0 text-white">About Me</h4>
+                            <h4 class="m-0 text-white">Work History</h4>
                         </div>
                     </div>
                 </div>
@@ -97,24 +97,28 @@
             <div class="container bg-white pt-5">
                 <div class="row px-3 pb-5">
                     <div class="col-md-12">
-                        <h2 class="mb-4 font-weight-bold">Article writer with 10 years of experience</h2>
-                        <img class="img-fluid float-left w-50 mr-4 mb-3" src="img/about.jpg" alt="Image">
+                        <h2 class="mb-4 font-weight-bold">Python Development</h2>                     
                         <p class="m-0">
-                            Takimata lorem et ut et diam amet dolor gubergren, amet dolor eirmod sea sea invidunt, sed no sed diam ipsum ut et. Sit nonumy est ut consetetur sed, labore dolor ipsum sed ea dolor lorem erat et erat, consetetur sed labore duo voluptua rebum sed gubergren. Dolores nonumy sanctus erat clita stet sed, dolore justo diam eos aliquyam diam. Clita nonumy rebum dolor dolor eos takimata labore diam sed, et voluptua et invidunt sanctus, elitr dolor nonumy tempor dolor elitr lorem no dolor ipsum, ut at gubergren dolor est aliquyam stet, et sea takimata rebum labore erat duo invidunt lorem. At takimata stet diam dolore accusam, kasd at diam aliquyam diam sed est dolor takimata. Sadipscing rebum diam ea et tempor, eirmod et et invidunt voluptua et dolor sit. Labore labore clita et amet sea sit et, est ipsum eirmod amet voluptua dolore, diam eirmod kasd lorem gubergren clita at amet, sea accusam vero amet lorem eos sed diam sit amet, nonumy ipsum et tempor magna dolores aliquyam vero eos ipsum. Ipsum ipsum sadipscing diam aliquyam diam et ipsum eos vero, gubergren magna elitr elitr clita dolor. Aliquyam vero sed sanctus sed dolore sanctus elitr no amet, ea magna ipsum.
+                            In my project to obtain the bachelor’s degree, the project was carried out using Python, OpenDss was connected and it was administered with python code. The Numpy and Pandas packages were used for the statistical part of the project. For Eaton I created an interface in Tkinter with a database in SQL for the search and generation of prices for the different catalogs that are sold. Besides this I did a small Django course and I practice problem solving on HackerRank. For the future I wish to improve skills in TensorFlow, the Licenciate’s degree project used CNN.
                         </p>
                     </div>
-                    <div class="col-md-12 pt-4">
-                        <div class="d-flex flex-column skills">
-                            <div class="progress w-100 mb-4">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">Adaptability</div>
-                            </div>
-                            <div class="progress w-100 mb-4">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">Research</div>
-                            </div>
-                            <div class="progress w-100">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Editing</div>
-                            </div>
-                        </div>
+					<div class="col-md-12">
+                        <h2 class="mb-4 font-weight-bold">Circuit Desing</h2>                     
+                        <p class="m-0">
+                            For the design of electronic circuits I took four courses at the university, where I learned about semiconductor diodes and applications, transistors, operation, polarization, amplification BJT, JFET, MOSFET, IGBT. Analysis and design of circuits with operational amplifiers. Here I took two laboratory courses, as well as two design and implementation projects. Using the tools of TINA, Proteus for the circuit design and KiCAD for the PCB. Now I am looking to start a personal project in the design of different speakers.
+                        </p>
+                    </div>
+                    <div class="col-md-12">
+                        <h2 class="mb-4 font-weight-bold">Project Developer Engineering</h2>                     
+                        <p class="m-0">
+                            Responsible for ensuring the testability and manufacturability of integrated circuits from the component feasibility stage through production ramp. Make significant contributions to design, development and validation of testability circuits. Evaluation, development and debug of complex test methods. Develops and debugs complex software programs to convert design validation vectors and drive complex test equipment. Creates and tests validation and production test hardware solutions. Tests, validates, modifies and redesigns circuits to guarantee component margin to specification. Analyzes and evaluates component specification versus performance to ensure optimal match of component requirements with production equipment capability with specific emphasis on yield analysis and bin split capability. Analyzes early customer returns with emphasis on driving test hole closure activities. Creates and applies concepts for optimizing component production relative to both quality and cost constraints. Autonomously plans and schedules own daily tasks, develops solutions to problems utilizing formal education and judgment.
+                        </p>
+                    </div>
+					<div class="col-md-12">
+                        <h2 class="mb-4 font-weight-bold">Project Engineering</h2>                     
+                        <p class="m-0">
+                            Interpret electrical drawings of commercial, residential and industrial buildings. Technical knowledge of the brand’s equipment and provide valuable solutions and engineering.
+                        </p>
                     </div>
                 </div>
             </div>
